--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -24,10 +24,24 @@ body
 .header
     display: flex
     flex-direction: column
+    position: relative
+    .menu-btn
+        width: 40px
+        height: 30px
+        flex-direction: column
+        justify-content: space-between
+        background: none
+        border: none
+        cursor: pointer
+        span
+            height: 5px
+            background-color: black
+            width: 100%
+            border-radius: 20px
 .header__title
     text-align: center
     padding: 45px
-
+    position: relative
 .header__title-text
     font-size: 66px
     font-weight: 500
@@ -107,24 +121,28 @@ section
 .advantages__wrapper
     display: flex
     justify-content: space-between
+    align-items: center
     padding: 80px 0
     flex-wrap: wrap
-    gap: 40px
+    gap: 50px
 .single__adv
     display: flex
     flex-direction: column
     align-items: center
     max-width: 250px
-    gap: 20px
+    gap: 30px
+    img
+        height: 40px
+
     p
         text-align: center
         font-size: 17px
+        max-width: 80%
+        height: 100px
 .learnmore
     text-align: center
     a
         color: #3a3aa4
-
-.price
 
 .price__wrapper
     display: flex
@@ -200,7 +218,6 @@ section
 
         &:focus
             outline: none
-    option
 
 .form__title
     font-size: 24px
@@ -219,8 +236,116 @@ section
     border-radius: 50px
     align-self: flex-end
 footer
-    background-color: black
+    background-color: #111113
     padding: 20px 0
     color: white
     font-size: 20px
     text-align: center
+
+@media (max-width: 1050px)
+    .menu
+        display: none
+    .header__title-text
+        font-size: 45px
+    .header__title-extratext
+        font-size: 23px
+
+@media (max-width: 926px)
+    .container
+        max-width: 800px
+        margin: auto
+    h2, h3, h4, h5, h6
+        font-size: 30px
+    .about__info
+        p
+            font-size: 16px
+            line-height: 1.2
+        button
+            padding: 10px 40px
+            font-size: 18px
+    .single__name
+        font-size: 20px !important
+    .price__number
+        font-size: 22px !important
+    .about__picture img
+        max-width: 100%
+    .advantages__wrapper
+        justify-content: center
+    .form__button
+        padding: 10px 20px
+        align-self: center
+    .buy__form
+        input
+            padding: 15px 25px
+
+@media (max-width: 700px)
+    .container
+        max-width: 600px
+        margin: auto
+    .menu-btn
+        display: flex !important
+        margin-left: 20px
+        position: absolute
+        top: 40%
+    .menu
+        transform: translateX(-100%)
+        transition: transform .6s
+        position: absolute
+        width: 100%
+        top: 80px
+        left: 0
+        right: 0
+        background-color: rgba(0, 0, 0, 0.9)
+        flex-direction: column
+        padding: 50px 30px
+        text-align: center
+        text-transform: uppercase
+        display: block
+        .menu-item
+            &:hover
+                background-color: none !important
+        a
+            color: white
+            font-size: 25px
+
+    .menu.menu-active
+        transform: translateX(0)
+    .about__info
+        button
+            padding: 6px 20px
+            font-size: 18px
+    .form__button
+        padding: 5px 10px
+        align-self: center
+
+@media (max-width: 520px)
+    .container
+        max-width: 400px
+        margin: auto
+    .header__title
+
+    h2, h3, h4, h5
+        text-align: center
+    .about__wrapper
+        flex-direction: column
+        text-align: center
+        .about__picture img
+            display: none
+    .price__wrapper
+        flex-direction: column
+        gap: 60px
+    .buy__form
+        text-align: center
+        input
+            padding: 10px
+            border-radius: 0
+        textarea
+            padding: 10px
+            border-radius: 0
+        select
+            padding: 10px
+            border-radius: 0
+    .form__button
+        width: 150px
+        padding: 10px 8px
+        align-self: center
