--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -34,10 +34,11 @@ body
         border: none
         cursor: pointer
         span
-            height: 5px
-            background-color: black
+            height: 4px
+            background-color: #111
             width: 100%
-            border-radius: 20px
+            border-radius: 50px
+
 .header__title
     text-align: center
     padding: 45px
@@ -191,7 +192,7 @@ section
     flex-direction: column
 
     label
-        margin: 15px 25px
+        margin: 25px
         font-weight: 500
         font-size: 22px
     input
