--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -179,9 +179,11 @@ section
         cursor: pointer
         box-shadow: 1px 2px 3px black
 .gallery
-    background-color: #320957be
+    background-image: url(images/back.jpg)
+    background-position: center
+    background-attachment: fixed
     color: white
-
+    height: 300px
 .buy
     background-color: #e0e0e0
     border-bottom: 1px solid #bebebe
